--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,11 @@
   --body-font: "PT Sans Caption", sans-serif;
 }
 
+::-moz-selection {
+  background-color: var(--orange);
+  color: black;
+}
+
 ::selection {
   background-color: var(--orange);
   color: black;
@@ -62,7 +67,7 @@ hr {
   font-family: var(--heading-font);
 }
 
-.editLayer .exit {
+.exit {
   background: none;
   border: none;
 }
@@ -71,6 +76,31 @@ hr {
   .sureLayer > div {
     min-width: 50%;
   }
+
+  .editLayer > div {
+    min-width: 75%;
+  }
+}
+
+.errorLayer {
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%, -100%);
+  background-color: #EB1D36;
+  color: white;
+  transition: .3s ease-in-out;
+  min-width: -webkit-fit-content;
+  min-width: -moz-fit-content;
+  min-width: fit-content;
+
+  i {
+    color: white;
+  }
+}
+
+.display-error-layer {
+  transform: translate(-50%, 50px);
 }
 /* End Edit Layer */
 
@@ -118,6 +148,11 @@ hr {
 .form .form-control:focus {
   border-color: #FEC260;
   box-shadow: 0 0 0 .25rem rgba(254, 194, 96, .25);
+}
+
+.form input::before {
+  content: "";
+  position: absolute;
 }
 
 .btn-visit {
